UV Editor, snap to pixel rounds wrong for negative coordinates. #42892

Closed
opened 2014-12-14 02:30:32 +01:00 by Fabian Emmes · 5 comments

System Information
Archlinux, Intel i5 (Sandy Bridge)

Blender Version
Broken: 2.72b

Short description of error
Snap to pixel rounds wrong for negative coordinates and is not idempotent.

Exact steps for others to reproduce the error
Open uv_snap_to_pixel.blend.
In the UV/Image editor window press Shift+S and select "Selected to Pixels".
Repeat the last step and notice how vertices are shifted although they already lie on the pixel grid.

**System Information** Archlinux, Intel i5 (Sandy Bridge) **Blender Version** Broken: 2.72b **Short description of error** Snap to pixel rounds wrong for negative coordinates and is not idempotent. **Exact steps for others to reproduce the error** Open [uv_snap_to_pixel.blend](https://archive.blender.org/developer/F131328/uv_snap_to_pixel.blend). In the UV/Image editor window press Shift+S and select "Selected to Pixels". Repeat the last step and notice how vertices are shifted although they already lie on the pixel grid.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @der_fab

Added subscriber: @der_fab
Campbell Barton self-assigned this 2014-12-14 04:18:52 +01:00

This issue was referenced by 17253bec06

This issue was referenced by 17253bec0639a910b3f8e5875d1b5b5605123757

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 17253bec06.

Closed by commit 17253bec06.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42892
No description provided.