Fix T42892: UV pixel snap with negative values